# sonarr-lang-checker

./: .env.example  .gitignore  LICENSE  README.en.md  README.it.md  README.md  TODO.en.md  TODO.md  language_flags.py  main.py  pyproject.toml  run.sh
.github/workflows/: tests.yml
tests/: test_cli.py  test_fetching.py  test_languages.py  test_output.py
