[project]
name = "sonarr-lang-checker"
version = "0.1.0"
description = "Controlla le discrepanze linguistiche tra episodi e stagioni in Sonarr"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "python-dotenv"
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"
