[project]
name = "sonarr-lang-checker"
version = "0.1.0"
description = "Controlla le discrepanze linguistiche tra episodi e stagioni in Sonarr"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2"
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
